Add `GET api/v1/industries`
