# api/app/controllers/api/v1/industries_controller.rb
@@ -1,0 +1,12 @@
+module Api
+  module V1
+    class IndustriesController < ApplicationController
+      def index
+        @industries = Industry.order(code: :asc)
+        @industries_count = Security.joins(:documents).group(:industry_code).count
+
+        render 'index.json.jb'
+      end
+    end
+  end
+end
