# api/config/routes.rb
@@ -3,6 +3,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       resources :hello, only: :index
       resources :companies, only: %i(index show)
+      resources :industries, only: %i(index)
     end
   end
 end
